--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@
 	font-size: 7rem;
 	font-family: 'Roboto', sans-serif;
     font-weight:700;
+    color:#1d2120;
 }
 .home-panel nav {
 	background-color: #bcd5d1;
@@ -36,6 +37,27 @@
     font-family: 'Roboto', sans-serif;
     font-weight:300;
 }
-#home-content {
-	height: 100%;
+#home-footer {
+    margin: 0 auto;
+}
+
+#links {
+	margin-top: 20px;
+}
+
+#links li{
+	list-style: none;
+	display: inline;
+	margin-right: 20px;
+}
+
+#links .fa-linkedin {
+	padding:10px;
+	background: #007bb5;
+	color: white;
+}
+#links .fa-github {
+	padding:10px;
+	background: #333333;
+	color: white;
 }
