--- a/styles.css
+++ b/styles.css
@@ -19,20 +19,36 @@
 .header {
 	margin:0;
 	padding: 60px;
-	background-color: #5a5c51;
+	background-color: #bcd5d1;
 }
 
 .header h1{
-	color: white;
-	font-size:5em;
-	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
-   	font-weight: 300;
+	color: black;
+	font-size:4em;
+	font-family: "Roboto-Condensed", sans-serif; 
+   	font-weight: 700;
 }
 
 /* SOCIAL LINKS */
-.about-me {
-	background-color: #bcd5d1
-}
+
 /* ABOUT ME */
+.about-me {
+	padding: 40px;
+	background-color: #e6f2ff
+}
+#headshot {
+	border-radius: 50%;
+	max-height: 100%;
+	max-width: 100%;
+}
+#bio p{
+	font-family: "Roboto-Condensed", sans-serif;
+   	font-weight: 300;
+   	font-size: 1.25em;
+   	color: #3b3a30;
+}
+
 
 /* PROJECTS */
+
+
