--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 	display: inline;
 	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
     font-weight: 300;
-    font-size:1.5em;
+    font-size:1.5rem;
 }
 
 .fa-linkedin {
@@ -24,7 +24,7 @@
 
 .header h1{
 	color: black;
-	font-size:4em;
+	font-size:4rem;
 	font-family: "Roboto-Condensed", sans-serif; 
    	font-weight: 700;
 }
