--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 .navbar li{
 	list-style: none;
 	display: inline;
-	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+	font-family: 'Open Sans', sans-serif;
     font-weight: 300;
     font-size:2rem;
 }
@@ -25,7 +25,7 @@
 .header h1{
 	color: white;
 	font-size:4rem;
-	font-family: "Roboto-Condensed", sans-serif; 
+	font-family: 'Libre Baskerville', serif;
    	font-weight: 700;
 }
 
@@ -41,12 +41,12 @@
 }
 #bio h1{
 	margin-top:0;
-	margin-bottom: 10px;
+	margin-bottom: 30px;
 
 }
 #bio p{
-	font-family: "Roboto-Condensed", sans-serif;
-   	font-weight: 300;
+	font-family: 'Open Sans', sans-serif;
+   	font-weight: 200;
    	font-size: 1.3em;
    	color: white;
 }
@@ -54,8 +54,8 @@
 #projects h1{
 	margin: 40px;
 	padding: 0;
-	font-family: "Roboto-Condensed", sans-serif; 
-   	font-weight: 300;
+	font-family: 'Open Sans', sans-serif;
+   	font-weight: 200;
 	color:white;
 	font-size:3em;
 }
