--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@
 /* HEADER */
 .header {
 	margin:0;
-	padding: 170px;
+	padding: 210px;
 	background-color: #76C4AE;
 }
 
@@ -35,10 +35,12 @@
 	max-height: 100%;
 	max-width: 100%;
 }
+
 #bio {
 	padding:0;
 	margin: 0;
 }
+
 #bio h1{
 	margin-top:0;
 	margin-bottom: 30px;
@@ -57,18 +59,19 @@
 	font-size:4rem;
 	font-family: 'Libre Baskerville', serif;
    	font-weight: 700;
-	color:white;
+	color: #1d2120;
 }
 
 /* PROJECTS */
 #projects {
 	padding: 50px;
-	background-color: #64706c;
+	background-color: white;
 }
 
 
 #projects img {
 	max-width: 100%;
+	border: 1px solid #e3e3e3;
 }
 
 #projects .caption {
@@ -84,10 +87,10 @@
 	font-family: 'Libre Baskerville', serif;
 	font-size:3rem;
 }
-#projects .caption p{
+
+#projects p{
 	font-style: oblique;
 }
-
 
 .portfolio-row{
 	margin-bottom: 20px;
