--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,8 @@
 #bio p{
 	font-family: 'Open Sans', sans-serif;
    	font-weight: 200;
-   	font-size: 1.25em;
+   	font-size: 1.3em;
+   	padding: 10px;
    	color: white;
 }
 
